# cogniteam_models

./: .gitignore
bobcat_description/: CMakeLists.txt  package.xml
bobcat_description/config/: bobcat_gazebo_control.yaml
bobcat_description/launch/: bobcat_gazebo_control.launch  bobcat_world.launch
bobcat_description/meshes/: back_left_wheel_lite.STL  back_right_wheel_lite.STL  front_left_wheel_lite.STL  front_right_wheel_lite.STL
bobcat_description/urdf/: BOBCAT.URDF
bobcat_description/worlds/: bobcat_env.world  bobcat_env2.world
cogniteam_models/: CMakeLists.txt  package.xml
lizi_description/: CMakeLists.txt
lizi_description/launch/: lizi.launch
lizi_description/models/: lizi.xacro
lizi_description/urdf/: lizi.urdf
lizi_description/worlds/: lizi.world
